# f1-flyinglap

./: .gitignore  ASSETS_GUIDE.md  Notes.md  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.js  skills-lock.json
.claude/skills/: awwwards-landing-page  gsap-greensock  premium-frontend-design  scroll-experience  threejs
.github/workflows/: update-f1-data.yml
app/: globals.css  layout.tsx  page.tsx
components/: AssetPlaceholder.tsx  DetailView.tsx  SpeedDelta.tsx  TeamGrid.tsx  VersusView.tsx
components/stages/: DriverDetail.tsx  GraphMode.tsx  TeamCarousel.tsx  TeamGrid.tsx  VersusMode.tsx
components/ui/: AnimatedGrid.tsx  CircleWheel.tsx  CustomCursor.tsx  DriverCard.tsx  DriverDetailModal.tsx  DriverProfileCard.css  DriverProfileCard.tsx  DriverShowcase.tsx  FiveLightsOut.tsx  GlowOrb.tsx  GradientCarousel.tsx  HUDOverlay.tsx  HyperspeedBackground.tsx  KineticNumber.tsx  Navbar.tsx  Preloader.tsx  ProgressiveBlur.tsx  QualifyingGapChart.tsx  RotatingCards.tsx  SimpleGraph.tsx  TeamColumn.tsx  TeamWallpaper.tsx  dock.tsx  (+5 more)
data/: drivers.ts  index.ts  podcast.ts  qualifying.ts  teamCarModels.ts  teams.ts
lib/: data.ts  gsap.ts  imagePreloader.ts  modelPreloader.ts  utils.ts  wheelUtils.ts  windTunnelEffect.ts
pipeline/: pyproject.toml
pipeline/src/f1pipeline/: __init__.py  compute_stats.py  config.py  fetch_calendar.py  fetch_drivers.py  fetch_qualifying.py  fetch_standings.py  fetch_teams.py  main.py  schema.py  write_json.py
store/: useAppStore.ts
tests/: rapid-click.spec.ts
types/: driver.ts  index.ts  qualifying.ts  team.ts
(+6 files in other folders)
