[project]
name = "f1-flyinglap-pipeline"
version = "1.0.0"
description = "FastF1 data pipeline for F1 Flying Lap app"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.4.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/f1pipeline"]
